<resources>
    <string name="app_name">StoryApp</string>
    <string name="image_description_story">story image</string>
    <string name="create_story">create story</string>
    <string name="image_description_upload">upload image</string>
    <string name="button_camera">Camera</string>
    <string name="button_gallery">Gallery</string>
    <string name="edittext_hint">Enter story description here</string>
    <string name="button_upload">Upload</string>
    <string name="text_welcome">Welcome to StoryApp!</string>
    <string name="text_instruction_login">please input your registered email\nand password first</string>
    <string name="button_login">Login</string>
    <string name="button_create_account">create an account</string>
    <string name="login_illustration">login illustration</string>
    <string name="register_illustration">register illustration</string>
    <string name="text_create_account">Let\'s Create an Account!</string>
    <string name="text_instruction_register">please input your data below</string>
    <string name="hint_username">johndoe</string>
    <string name="button_register">Register</string>
    <string name="textbutton_login">I\'m already have an account</string>
    <string name="menu_logout">logout</string>
    <string name="menu_language">language</string>
    <string name="connection_warning">Please check your internet connection</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_failed">Upload failed</string>
    <string name="upload_warning">Please choose image first</string>
    <string name="login_success">Login success</string>
    <string name="email_input_warning">Please fill your email</string>
    <string name="password_input_warning">Please fill your password</string>
    <string name="login_input_warning">Please fill your email and password correctly</string>
    <string name="register_success">Registration success</string>
    <string name="username_warning">Please fill your username</string>
    <string name="register_input_warning">Please fill the data correctly</string>
    <string name="textinput_email_warning">Invalid Email</string>
    <string name="textinput_password_warning">Password is less than 6 characters</string>
    <string name="detail_laceholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="story_desc_warning">Please fill your story description</string>
    <string name="story_image_desc">story image</string>
    <string name="location">Location</string>
    <string name="retry">Retry</string>
</resources>